2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/LanguageBindingService.cs,
	  MonoDevelop.Projects.Ambience/AmbienceService.cs,
	  MonoDevelop.Projects.addin.xml, MonoDevelop.Projects.mdp, Makefile.am:
	  Reorganized the extension point hierarchy. Embedded all add-in manifests
	  as resources.

2007-08-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/ProjectsServices.cs,
	  MonoDevelop.Projects/LanguageBindingService.cs,
	  MonoDevelop.Projects/LanguageService.cs, MonoDevelop.Projects.addin.xml,
	  MonoDevelop.Projects.mdp, Makefile.am,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: API cleanup.
	  Converted core services into regular classes.

2007-08-01  Marcos David Marín Amador <MarcosMarin@gmail.com>

	* MonoDevelop.Projects/CustomCommand.cs: Added the working directory
	  property which is now parsed to support variables. The arguments 
	  int the command entry are also now parsed.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/CustomCommand.cs: Report custom command errors.

2007-07-24  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs: Override
	GetHashCode() and Equals() on class MemberReference, this is to
	make it easier for implementations to only add unique references
	to the collection as they are found.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectReference.cs,
	  MonoDevelop.Projects.Parser/AssemblyCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Parser/AssemblyInformation.cs,
	  MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Use the log
	  service for logging errors.
	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Removed debug
	  code from critical execution paths.

2007-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs